# advent-of-code-24

./: README.md  day_1.ipynb  day_10.ipynb  day_11.ipynb  day_2.ipynb  day_3.ipynb  day_4.ipynb  day_5.ipynb  day_6.ipynb  day_7.ipynb  day_8.ipynb  day_9.ipynb  pyproject.toml
